Cleaned up some code and updated README.md